fix: fix notebook input quantization and add quantize_input function in QuantizedModule

--- a/docs/user/advanced_examples/LinearRegression.ipynb
+++ b/docs/user/advanced_examples/LinearRegression.ipynb
@@ -186,10 +186,10 @@
     "        # Dequantize to have the value in clear and ready for next calibration\n",
     "        return q_function(q_calibration_data).dequant()\n",
     "\n",
-    "    def quantize_input(self, x):\n",
+    "    def quantize_input(self, values):\n",
     "        \"\"\"Quantize an input set with the quantization parameters determined from calibration\"\"\"\n",
     "        q_input_arr = deepcopy(self.q_calibration_data)\n",
-    "        q_input_arr.update_values(x)\n",
+    "        q_input_arr.update_values(values)\n",
     "        return q_input_arr"
    ]
   },
