--- a/docs/user/advanced_examples/PoissonRegression.ipynb
+++ b/docs/user/advanced_examples/PoissonRegression.ipynb
@@ -322,9 +322,9 @@
     "        return q_function(q_calibration_data).dequant()\n",
     "\n",
     "\n",
-    "    def quantize_input(self, x):\n",
+    "    def quantize_input(self, values):\n",
     "        q_input_arr = deepcopy(self.q_calibration_data)\n",
-    "        q_input_arr.update_values(x)\n",
+    "        q_input_arr.update_values(values)\n",
     "        return q_input_arr"
    ]
   },
