--- a/docs/user/advanced_examples/LogisticRegression.ipynb
+++ b/docs/user/advanced_examples/LogisticRegression.ipynb
@@ -209,9 +209,9 @@
     "        # Dequantize to have the value in clear and ready for next calibration\n",
     "        return q_function(q_calibration_data).dequant()\n",
     "\n",
-    "    def quantize_input(self, x):\n",
+    "    def quantize_input(self, values):\n",
     "        q_input_arr = deepcopy(self.q_calibration_data)\n",
-    "        q_input_arr.update_values(x)\n",
+    "        q_input_arr.update_values(values)\n",
     "        return q_input_arr\n",
     "\n"
    ]
