--- a/docs/tutorial/sha256.ipynb
+++ b/docs/tutorial/sha256.ipynb
@@ -549,21 +549,47 @@
    "metadata": {},
    "source": [
     "#### 2. Implementing operations on the n-bits integers array representation\n",
-    "We cannot use the regular summing operation over these arrays, because if we did, we would get integers going up to **n+1 bits**, leading to an incorrect encoding of the **32-bits** integer represented.  \n",
+    "We cannot use the regular array summing of two arays to sum these arrays, because if we did, we would get integers going up to **n+1 bits**, leading to an incorrect encoding of the **32-bits** integer represented.  \n",
     "\n",
-    "Let's first create an algoritm performing the sum over two binary arrays and putting the result in a third array. Passing a third array in the function to store the results allows to reuse previously created arrays and can generally speed up computations."
+    "Let's first create a summing algoritm (modulo `2**32`) for two binary arrays reprensenting each a **32-bits** integer, and that can operate homomorphically.  \n",
+    "\n",
+    "A typical algorithm of this kind could be: \n",
+    "```python\n",
+    "def sumBin(x: np.ndarray, y: np.ndarray):\n",
+    "    result = cnp.zeros(32)\n",
+    "    carry = 0\n",
+    "    for i in range(32, -1, -1):\n",
+    "        # Calculate the sum of the current integer and the carry\n",
+    "        s = x[i] + y[i] + carry\n",
+    "        # If the sum is greater than 3, there is a carry for the next integer\n",
+    "        if s > 1:\n",
+    "            carry = 1\n",
+    "            s -= 2\n",
+    "        else:\n",
+    "            carry = 0\n",
+    "        # Set the current integer in the result, last carry is unused modulo 2**32\n",
+    "        result[i] = s\n",
+    "    return result\n",
+    "\n",
+    "```\n",
+    "\n",
+    "The main issue here would be that comparing `s > 1` would not work on encrypted data. So we need to make it without the use of a carry. The following algorithm uses instead only homomorphic operations:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sum:  [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 0 1 0 0 0 0 0 1 0 1]\n"
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-ec758065d39e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mdef\u001b[0m \u001b[0msumBin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndarray\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndarray\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m         \"\"\"\n\u001b[1;32m      3\u001b[0m         \u001b[0mAddition\u001b[0m \u001b[0mmod\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;36m32\u001b[0m \u001b[0mof\u001b[0m \u001b[0mtwo\u001b[0m \u001b[0;36m32\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mbits\u001b[0m \u001b[0mintegers\u001b[0m \u001b[0mencoded\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0marrays\u001b[0m \u001b[0mof\u001b[0m \u001b[0;36m32\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mbit\u001b[0m \u001b[0mintegers\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m         \"\"\"\n\u001b[1;32m      5\u001b[0m         \u001b[0mn\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m32\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
      ]
     }
    ],
@@ -599,9 +625,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we can make this code **generic** by making a **template** function that can deal with other bit width. In python this can be made with a **class** definition taking the `nbits` value at initiliazation.\n",
+    "Now we can make this code **generic** by making a **template** function that can deal with other bit widths. In python this can be made with either a factory function (see later) or a **class** definition taking the `nbits` value at initiliazation.\n",
     "\n",
-    "We can also specify wether we want to use concrete numpy or simply numpy. This is not mandatory for creating a circuit in concrete numpy, but it is very usefull for debugging, because we can compare the outputs produced by the numpy only, clear version, and the concrete numpy, homomorphic version.\n",
+    "We can also specify wether we want to use concrete numpy or simply numpy. This is not mandatory for creating a circuit in concrete numpy, but it is very usefull for debugging, because we can compare the outputs produced by the numpy only, clear version, and the concrete numpy, homomorphic version. For now, let's test with numpy only.\n",
     "\n",
     "Note that when we add up two integers, we need to store them in an integer that at least 1 more bit.  \n",
     "This is why we cannot use **16-bits** integers here, because they would require a **17-bits** integer that is not availabe in concrete numpy."
@@ -679,32 +705,25 @@
    "source": [
     "In the same way, let's make a **template** function for the right rotation of the bits of a **32-bits** integer encoded as an array of **n-bits** integers. Making a **template** function also allows us to store some variables locally in the class that will serve the computation, and not bother with them outside.  \n",
     "\\\n",
-    "To rotate the encoded 32-bits integer of `y` bits, the idea is to first decompose `y` into `yc` and `yr` such that `y = yc*nbits + yr`, then to rotate the whole array of `yc` spots, and then to rotate each integer of the new array of the remaining `yr` bits, where `yr` is now smaller than `nbits`."
+    "To rotate the encoded 32-bits integer of `y` bits, the idea is to first decompose `y` into `yc` and `yr` such that `y = yc*nbits + yr`, then to rotate the whole array of `yc` spots, and then to rotate each integer of the new array of the remaining `yr` bits, where `yr` is now smaller than `nbits`.  \n",
+    "\n",
+    "The parameter `y` will not be encrypted, it is a known constant. So, we can write conditions such as `if(yc>0):`. At the opposite, `x` will be encrypted, so we need to work on it with only homomorphic compatible operations such as bit shifting `>>`, bitwse AND `&`, addition `+` etc."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "binary array:\n",
-      "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 0 1 0 0 0 0 0 1 0 1]\n",
-      "\n",
-      "the array is right rotated of 3 bits:\n",
-      "[1 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 0 1 0 0 0 0 0]\n",
-      "\n",
-      "2-bits array:\n",
-      "[0 0 0 0 0 0 0 0 0 0 3 1 0 0 1 1]\n",
-      "\n",
-      "the bits are right rotated of 2 bits, which causes the 2-bits integers to be rotated themselves in the array:\n",
-      "[1 0 0 0 0 0 0 0 0 0 0 3 1 0 0 1]\n",
-      "\n",
-      "With 3 bits rotation, the integers are modified, but the overal bit sequence is well rotated:\n",
-      "[2 2 0 0 0 0 0 0 0 0 0 1 2 2 0 0]\n"
+     "ename": "NameError",
+     "evalue": "name 'FnSplit' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-37252cc4c4ef>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mclass\u001b[0m \u001b[0mROTRSplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mFnSplit\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \"\"\"\n\u001b[1;32m      3\u001b[0m     \u001b[0mFactory\u001b[0m \u001b[0;32mclass\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mROTR\u001b[0m \u001b[0mfunctions\u001b[0m \u001b[0moperating\u001b[0m \u001b[0mon\u001b[0m \u001b[0;36m32\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mbits\u001b[0m \u001b[0mintegers\u001b[0m \u001b[0mencoded\u001b[0m \u001b[0minto\u001b[0m \u001b[0mseveral\u001b[0m \u001b[0msmaller\u001b[0m \u001b[0mintegers\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \"\"\"       \n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'FnSplit' is not defined"
      ]
     }
    ],
@@ -767,7 +786,7 @@
    "source": [
     "We can do a similar function for the right shift operation, where we first shift the array of integers itself of `yc` spots, then we shift the bits with the remaining `yr` shift.  \n",
     "\\\n",
-    "Note that during the shifting of the array, we need to set the left values of the array to zero. To do this on encrypted data, we cannot use the value `0`, so we use the shifting operation. By right shifting **n-bits** integers of **n** bits, they are indeed set to **zero** homomorphically."
+    "Note that during the shifting of the array, we need to set the left values of the array to zero. To do this on encrypted data, we cannot use the value `0`, so we use the values in `cnp.zeros(.)` which are encrypted zeros."
    ]
   },
   {
@@ -853,7 +872,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the same fashion, we can design a template class `Sigmas` to hold the four functions `sigma0`, `sigma1`, `SIGMA0`, `SIGMA1` using internally a `ROTR` and a `SHR`:"
+    "In the same fashion, we can design a template class `Sigmas` to hold the four functions `sigma0`, `sigma1`, `SIGMA0`, `SIGMA1` using internally a `ROTR` and a `SHR` as well as the bitwise **XOR** operator `^` which is included in concrete numpy:"
    ]
   },
   {
@@ -978,7 +997,7 @@
     "\n",
     "We provide as encrypted inputs to the circuit the preprocessed values of our text message, but also of the constants `H_INITIAL` and `K256` which are also inputs of the algorithm.  \n",
     "\n",
-    "Make sure to copy array values and not array objects themselves with for instance `h[:]=g[:]`."
+    "When dealing with array objects, make sure to copy the array values and not the array objects themselves, by using for instance the notation `h[:]=g[:]`."
    ]
   },
   {
@@ -1193,7 +1212,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can try out the time it takes for different values of n-bits. The 1-bit and 2-bits versions should be by far the fastest.  \n",
+    "You can try out the time it takes for different values of **n-bits**. The **1-bit** and **2-bits** versions should be by far the fastest.  \n",
     "\n",
     "Finally, if you have a fast computer at your disposition, you can create the full concrete version of the circuit and run it:\n",
     "\n",
